# scopa-fish

./: Cargo.toml
src/: main.rs
src/game/: mod.rs
src/myai/: main.rs
src/myai/mcts/: mod.rs
src/myai/nn/: mod.rs
src/myai/training/: mod.rs
